Add html2canvas capability.

--- a/web/styles/global.css
+++ b/web/styles/global.css
@@ -1,7 +1,11 @@
 @tailwind base;
+@layer base {
+  img {
+    @apply inline-block;
+  }
+}
 @tailwind components;
 @tailwind utilities;
-
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
